--- a/config/locales/jobs/es.yml
+++ b/config/locales/jobs/es.yml
@@ -12,3 +12,6 @@ es:
         ingresando a su cuenta. Este código caducará en %{expiration} minutos."
       verify_message: "%{code} es tu código de confirmación de %{app}. Use esto para
         confirmar su número de teléfono. Este código caducará en %{expiration} minutos."
+    sms_personal_key_sign_in_notifier_job:
+      message: Su clave personal solo se utilizó para iniciar sesión en su cuenta
+        login.gov. Si no fue así, reinicie su contraseña y contáctenos en security@login.gov.
