--- a/config/locales/jobs/fr.yml
+++ b/config/locales/jobs/fr.yml
@@ -14,3 +14,7 @@ fr:
       verify_message: "%{code} est votre code de confirmation %{app}. Utilisez-le
         pour confirmer votre numéro de téléphone. Ce code expirera dans %{expiration}
         minutes."
+    sms_personal_key_sign_in_notifier_job:
+      message: Votre clé personnelle a été utilisée pour vous connecter à votre compte
+        login.gov. Si ce n’était pas vous, changez votre mot de passe et contactez-nous
+        à security@login.gov.
