--- a/config/locales/jobs/en.yml
+++ b/config/locales/jobs/en.yml
@@ -12,3 +12,6 @@ en:
         in to your account. This code will expire in %{expiration} minutes."
       verify_message: "%{code} is your %{app} confirmation code. Use this to confirm
         your phone number. This code will expire in %{expiration} minutes."
+    sms_personal_key_sign_in_notifier_job:
+      message: Your personal key was just used to sign into your login.gov account.
+        If this wasn’t you, reset your password and contact us at security@login.gov.
