LG-337 Add option to use personal security/recovery codes.
**Why**: User need a more secure option for 2fa recovery
**How**: Add controller and code to handle the personal security code selection.

--- a/config/locales/two_factor_authentication/en.yml
+++ b/config/locales/two_factor_authentication/en.yml
@@ -99,6 +99,8 @@ en:
       voice_info: Get your security code via phone call
       webauthn: Security key
       webauthn_info: Use a security key to secure your account
+      recovery_code: Personal Security Codes
+      recovery_code_info: Recieve a pre-generated list of security codes to use when signing in
     webauthn_fallback:
       question: Don't have your security key available?
     webauthn_header_text: Present your security key
