--- a/config/locales/two_factor_authentication/fr.yml
+++ b/config/locales/two_factor_authentication/fr.yml
@@ -102,6 +102,8 @@ fr:
       voice_info: Obtenez votre code de sécurité par appel téléphonique
       webauthn: Clé de sécurité
       webauthn_info: Utilisez une clé de sécurité pour sécuriser votre compte
+      recovery_code: Codes de sécurité personnels
+      recovery_code_info: Recevoir une liste pré-générée de codes de sécurité à utiliser lors de la connexion
     webauthn_fallback:
       question: Votre clé de sécurité n'est-elle pas disponible?
     webauthn_header_text: Présentez votre clé de sécurité
