--- a/config/locales/headings/es.yml
+++ b/config/locales/headings/es.yml
@@ -5,6 +5,7 @@ es:
       account_history: Historial de cuenta
       account_management: Manejo de cuenta
       connected_apps: Aplicaciones
+      login_history: Historial de sesión
       login_info: Su cuenta
       profile_info: Información de perfil
       reactivate: Reactive su cuenta
