--- a/config/locales/account/fr.yml
+++ b/config/locales/account/fr.yml
@@ -8,13 +8,9 @@ fr:
       auth_app_disabled: non activée
       auth_app_enabled: activée
       authentication_app: Application d'authentification
-      current_ip: Adresse IP actuelle
-      current_sign_in: Heure de connexion actuelle
       dob: Date de naissance
       email: Adresse courriel
       full_name: Nom complet
-      last_ip: Adresse IP précédente
-      last_sign_in: Heure de connexion précédente
       login: Information de connexion
       password: Mot de passe
       phone: Numéro de téléphone
@@ -27,7 +23,10 @@ fr:
           de mot passe. Vous pouvez utiliser votre clé personnelle pour réactiver
           votre profil.
         link: Réactivez votre profil maintenant.
+      sign_in_location_and_ip: "%{location} (Adresse IP: %{ip})"
+      sign_in_timestamp: Il y a %{timestamp}
       ssn: Numéro d'assurance sociale
+      unknown_location: lieu inconnu
       verification:
         instructions: Votre compte requiert la vérification d'un code secret.
         reactivate_button: Entrez le code que vous avez reçu par la poste
