--- a/config/locales/headings/en.yml
+++ b/config/locales/headings/en.yml
@@ -5,6 +5,7 @@ en:
       account_history: Account history
       account_management: Account Management
       connected_apps: Applications
+      login_history: Login history
       login_info: Your account
       profile_info: Profile information
       reactivate: Reactivate your account
