--- a/config/locales/forms/es.yml
+++ b/config/locales/forms/es.yml
@@ -36,9 +36,18 @@ es:
         a continuación.
       title: Ingrese su clave personal
     recovery_code:
-      title: Use códigos de inicio de sesión si no puede acceder a su teléfono para iniciar sesión
+      title: Personal Security Codes
+      info: Use códigos de inicio de sesión si no puede acceder a su teléfono para iniciar sesión
       instructions: Se le pedirá un código de inicio de sesión cada vez que inicie sesión.
         a su cuenta login.gov.
+      subtitle1: Your login codes
+      subinfo1: Each code may only be used once, once the 9th code has been
+        used you will be prompted to download a new list.  Treat your recovery
+        codes with the same level of attention as you would your password.
+      download: Download, print or write down your personal security codes.
+      generate: Generate new login codes
+      generate_info: When you generate new codes, you must download or print them.
+        Your old codes won't work anymore.
     phone:
       buttons:
         delete: Eliminar el teléfono
