--- a/config/locales/two_factor_authentication/en.yml
+++ b/config/locales/two_factor_authentication/en.yml
@@ -16,6 +16,7 @@ en:
     invalid_otp: That security code is invalid. You can try entering it again or request
       a new one-time security code.
     invalid_personal_key: That personal key is invalid.
+    invalid_recovery_code: That personal security code is invalid.
     invalid_piv_cac: That PIV/CAC is incorrect.
     login_intro: You set these up when you created your account
     login_options:
@@ -50,6 +51,8 @@ en:
     max_piv_cac_login_attempts_reached: For your security, your account is temporarily
       locked because you have presented your piv/cac credential incorrectly too many
       times.
+    max_recovery_code_login_attempts_reached: For your security, your account is temporarily
+      locked because you have entered the personal security code incorrectly too many times.
     otp_delivery_preference:
       instruction: You can change this selection the next time you log in. If you
         entered a landline, please select "Phone call" below.
