--- a/config/locales/user_mailer/es.yml
+++ b/config/locales/user_mailer/es.yml
@@ -43,6 +43,27 @@ es:
     password_changed:
       help: Si no realizó este cambio, visite el %{app} %{help_link} o el %{contact_link}.
       intro: Tiene una contraseña nueva para su cuenta de %{app}.
+    personal_key_regenerated:
+      help_html: <p>Tu cuenta de login.gov acaba de emitir una nueva clave personal
+        de 16 caracteres. Estás recibiendo este correo electrónico para verificar
+        que eras tú. </p><p>Si acabas de iniciar sesión y has regenerado tu clave
+        personal, ¡fantástico! No es necesario que hagas nada.</p><p>Si no acabas
+        de regenerar tu clave personal, o si no estás seguro, sigue estos pasos para
+        proteger tu cuenta:<ol><li><strong><a href="%{reset_password_url}">Cambia
+        tu contraseña</a>.</strong> Elige una contraseña que aún no hayas utilizado
+        con esta cuenta. </li><li><strong><a href="%{account_url}">Inicia sesión en
+        tu cuenta de login.gov</a></strong> y asegúrate de que reconoces toda la información
+        de la página de tu cuenta, como los métodos que utilizas para la autenticación
+        de dos factores, como el número de teléfono, la aplicación de autenticación
+        o la clave de seguridad. </li><li><strong>En la <a href="%{account_url}">página
+        de tu cuenta de login.gov</a>, solicita una nueva clave personal</strong>.
+        Recuerda no compartirla nunca a menos que la estés usando para acceder a un
+        sitio web de confianza que utilice login.gov.</li></ol></p><p>Deberías ponerte
+        en contacto con nosotros llamando al 844-875-6446 o enviando un correo electrónico
+        a <a href="mailto:security@login.gov">security@login.gov</a>.</p><br>Gracias,<br>El
+        equipo de login.gov
+      intro: Nueva clave personal emitida
+      subject: Alerta de seguridad de la cuenta
     personal_key_sign_in:
       help_html: <p>Su cuenta login.gov acaba de iniciar sesión con su clave personal
         de 16 caracteres. Usted está recibiendo este e-mail para asegurarse de que
