--- a/config/locales/user_mailer/fr.yml
+++ b/config/locales/user_mailer/fr.yml
@@ -45,6 +45,27 @@ fr:
       help: Si vous n'avez pas changé votre mot de passe, veuillez visiter le %{help_link}
         de %{app} ou %{contact_link}.
       intro: Le mot de passe de votre compte %{app} a été changé.
+    personal_key_regenerated:
+      help_html: <p>Votre compte login.gov vient de recevoir une nouvelle clé personnelle
+        de 16 caractères. Le but de cet e-mail est de s'assurer que c'est bien vous
+        qui en êtes à l'origine.</p><p> Si vous venez de vous connecter et de régénérer
+        votre clé personnelle, c'est parfait ! Vous n'avez rien à faire.</p><p> Si
+        vous ne venez pas de régénérer votre clé personnelle, ou en cas de doute,
+        effectuez immédiatement les actions suivantes pour sécuriser votre compte :<ol><li><strong><a
+        href="%{reset_password_url}"> Modifiez votre mot de passe</a>.</strong> Choisissez
+        un mot de passe que vous n'avez pas encore utilisé avec ce compte.</li><li><strong><a
+        href="%{account_url}"> Connectez-vous à votre compte login.gov</a></strong>
+        et vérifiez bien que toutes les informations sur la page de votre compte sont
+        correctes, y compris les méthodes que vous utilisez pour l’authentification
+        à deux facteurs, dont le numéro de téléphone, l’application d’authentification
+        ou la clé de sécurité.</li><li><strong>Sur votre <a href="%{account_url}">page
+        de compte login.gov</a>, demandez une nouvelle clé personnelle.</strong> N'oubliez
+        pas de ne jamais la partager, sauf si vous l'utilisez pour vous connecter
+        à un site de confiance qui utilise login.gov.</li></ol></p><p>Veuillez ensuite
+        nous contacter en appelant le 844-875-6446 ou par e-mail à <a href="mailto:security@login.gov">security@login.gov</a>.</p><br>Merci,<br>L'équipe
+        login.gov
+      intro: Nouvelle clé personnelle émise
+      subject: Alerte de sécurité du compte
     personal_key_sign_in:
       help_html: <p>Votre compte login.gov a été connecté à l'aide de votre clé personnelle.
         Vous recevez cet email pour vous assurer que c'était bien vous.</p><p>Si vous
