LG-785 Alert users when personal key is regenerated (#2660)
**Why**: So that user's can be aware of any potential suspicious
activity associated with their account.

--- a/config/locales/jobs/es.yml
+++ b/config/locales/jobs/es.yml
@@ -12,6 +12,9 @@ es:
         ingresando a su cuenta. Este código caducará en %{expiration} minutos."
       verify_message: "%{code} es tu código de confirmación de %{app}. Use esto para
         confirmar su número de teléfono. Este código caducará en %{expiration} minutos."
+    sms_personal_key_regeneration_notifier_job:
+      message: Se ha emitido una nueva clave personal para tu cuenta %{app}. Si no
+        eres tú, restablece tu contraseña y ponte en contacto con nosotros en security@login.gov.
     sms_personal_key_sign_in_notifier_job:
       message: Su clave personal solo se utilizó para iniciar sesión en su cuenta
-        login.gov. Si no fue así, reinicie su contraseña y contáctenos en security@login.gov.
+        %{app}. Si no fue así, reinicie su contraseña y contáctenos en security@login.gov.
