LG-233 Add account access details to account page (#2141)
**Why**: Through the Devise gem, the DB already captures the info listed
below. Displaying it to the user is a trivial change, and makes it
easier for the user and for the customer contact center folks to verify
the validity of claims such as "I've been hacked".

--- a/config/locales/account/en.yml
+++ b/config/locales/account/en.yml
@@ -21,7 +21,10 @@ en:
       reactivation:
         instructions: Your profile was recently deactivated due to a password reset.
         link: Reactivate your profile now.
+      sign_in_location_and_ip: 'From %{location} (IP address: %{ip})'
+      sign_in_timestamp: "%{timestamp} ago"
       ssn: Social Security Number
+      unknown_location: unknown location
       verification:
         instructions: Your account requires a secret code to be verified.
         reactivate_button: Enter the code you received via US mail
