--- a/config/locales/account/es.yml
+++ b/config/locales/account/es.yml
@@ -21,7 +21,10 @@ es:
       reactivation:
         instructions: Su perfil ha sido desactivado debido a un cambio de contraseña.
         link: Reactive su perfil ahora.
+      sign_in_location_and_ip: 'Desde %{location} (Dirección IP: %{ip})'
+      sign_in_timestamp: Hace %{timestamp}
       ssn: Número de Seguro Social
+      unknown_location: ubicación desconocida
       verification:
         instructions: Su cuenta requiere que un código secreto sea verificado.
         reactivate_button: Ingrese el código que recibió por correo postal.
