--- a/config/locales/account/fr.yml
+++ b/config/locales/account/fr.yml
@@ -23,7 +23,10 @@ fr:
           de mot passe. Vous pouvez utiliser votre clé personnelle pour réactiver
           votre profil.
         link: Réactivez votre profil maintenant.
+      sign_in_location_and_ip: "%{location} (Adresse IP: %{ip})"
+      sign_in_timestamp: Il y a %{timestamp}
       ssn: Numéro d'assurance sociale
+      unknown_location: lieu inconnu
       verification:
         instructions: Votre compte requiert la vérification d'un code secret.
         reactivate_button: Entrez le code que vous avez reçu par la poste
