--- a/config/locales/two_factor_authentication/en.yml
+++ b/config/locales/two_factor_authentication/en.yml
@@ -16,7 +16,7 @@ en:
     invalid_otp: That security code is invalid. You can try entering it again or request
       a new one-time security code.
     invalid_personal_key: That personal key is invalid.
-    invalid_recovery_code: That personal security code is invalid.
+    invalid_backup_code: That personal security code is invalid.
     invalid_piv_cac: That PIV/CAC is incorrect.
     login_intro: You set these up when you created your account
     login_options:
@@ -51,7 +51,7 @@ en:
     max_piv_cac_login_attempts_reached: For your security, your account is temporarily
       locked because you have presented your piv/cac credential incorrectly too many
       times.
-    max_recovery_code_login_attempts_reached: For your security, your account is temporarily
+    max_backup_code_login_attempts_reached: For your security, your account is temporarily
       locked because you have entered the personal security code incorrectly too many times.
     otp_delivery_preference:
       instruction: You can change this selection the next time you log in. If you
@@ -66,8 +66,8 @@ en:
     personal_key_header_text: Enter your personal key
     personal_key_prompt: You can use this personal key once. After you enter it, you'll
       be provided a new key.
-    recovery_code_header_text: Enter your security code
-    recovery_code_prompt: You can use this security code once. After you enter it, you'll
+    backup_code_header_text: Enter your security code
+    backup_code_prompt: You can use this security code once. After you enter it, you'll
       need to use a new key.
     phone:
       delete:
@@ -87,8 +87,8 @@ en:
     read_about_two_factor_authentication:
       link: read about two-factor authentication
       text_html: You can %{link} and why we use it at our Help page.
-    recovery_code_fallback:
-      question: Don't have your recovery codes available?
+    backup_code_fallback:
+      question: Don't have your backup codes available?
     totp_fallback:
       question: Don't have your authenticator app?
     totp_header_text: Enter your authentication app code
@@ -107,8 +107,8 @@ en:
       voice_info: Get your security code via phone call
       webauthn: Security key
       webauthn_info: Use a security key to secure your account
-      recovery_code: Personal Security Codes
-      recovery_code_info: Recieve a pre-generated list of security codes to use when signing in
+      backup_code: Personal Security Codes
+      backup_code_info: Recieve a pre-generated list of security codes to use when signing in
     webauthn_fallback:
       question: Don't have your security key available?
     webauthn_header_text: Present your security key
