--- a/config/locales/two_factor_authentication/fr.yml
+++ b/config/locales/two_factor_authentication/fr.yml
@@ -16,7 +16,7 @@ fr:
     invalid_otp: Ce code de sécurité est non valide. Vous pouvez essayer de l'entrer
       de nouveau ou demander un nouveau code de sécurité à utilisation unique.
     invalid_personal_key: Cette clé personnelle est non valide.
-    invalid_recovery_code: Ce code de sécurité personnel est invalide.
+    invalid_backup_code: Ce code de sécurité personnel est invalide.
     invalid_piv_cac: Cette carte PIV/CAC n'est pas correcte.
     login_intro: Vous les avez configurés lorsque vous avez crée votre compte
     login_options:
@@ -53,7 +53,7 @@ fr:
     max_piv_cac_login_attempts_reached: Pour votre sécurité, votre compte a été temporairement
       bloqué en raison de la saisie de mauvais identifiants PIV/CAC à de trop nombreuses
       reprises.
-    max_recovery_code_login_attempts_reached: Pour votre sécurité, votre compte est temporairement
+    max_backup_code_login_attempts_reached: Pour votre sécurité, votre compte est temporairement
       verrouillé parce que vous avez entré trop de fois le code de sécurité personnel à tort.
     otp_delivery_preference:
       instruction: Vous pouvez changer cette sélection la prochaine fois que vous
@@ -68,8 +68,8 @@ fr:
     personal_key_header_text: Entrez votre clé personnelle
     personal_key_prompt: Vous pouvez utiliser cette clé personnelle une fois seulement.
       Une fois que vous l'entrez, vous recevrez une nouvelle clé.
-    recovery_code_header_text: Enter your security code
-    recovery_code_prompt: You can use this security code once. After you enter it, you'll
+    backup_code_header_text: Enter your backup security code
+    backup_code_prompt: You can use this security code once. After you enter it, you'll
       need to use a new key.
     phone:
       delete:
@@ -87,8 +87,8 @@ fr:
       question: Vous n'avez pas accès à votre carte PIV/CAC?
     piv_cac_header_text: Veuillez présenter votre carte PIV/CAC
     please_try_again_html: Veuillez essayer de nouveau dans <strong id=%{id}>%{time_remaining}</strong>.
-    recovery_code_fallback:
-      question: Don't have your recovery codes available?
+    backup_code_fallback:
+      question: Don't have your backup codes available?
     read_about_two_factor_authentication:
       link: lire sur l'authentification à deux facteurs
       text_html: Vous pouvez %{link} et pourquoi nous l'utilisons sur notre page d'aide.
@@ -110,8 +110,8 @@ fr:
       voice_info: Obtenez votre code de sécurité par appel téléphonique
       webauthn: Clé de sécurité
       webauthn_info: Utilisez une clé de sécurité pour sécuriser votre compte
-      recovery_code: Codes de sécurité personnels
-      recovery_code_info: Recevoir une liste pré-générée de codes de sécurité à utiliser lors de la connexion
+      backup_code: Codes de sécurité personnels
+      backup_code_info: Recevoir une liste pré-générée de codes de sécurité à utiliser lors de la connexion
     webauthn_fallback:
       question: Votre clé de sécurité n'est-elle pas disponible?
     webauthn_header_text: Présentez votre clé de sécurité
