--- a/config/locales/users/en.yml
+++ b/config/locales/users/en.yml
@@ -19,11 +19,11 @@ en:
       generated_on_html: Generated on %{date}
       header: Your personal key
       print: Print this page
-    recovery_code:
+    backup_code:
       close: Close
-      confirmation_error: You've entered an incorrect recovery code.
+      confirmation_error: You've entered an incorrect backup code.
       generated_on_html: Generated on %{date}
-      header: Your recovery code
+      header: Your backup code
       print: Print this page
     totp_setup:
       new:
