--- a/config/locales/forms/en.yml
+++ b/config/locales/forms/en.yml
@@ -36,7 +36,7 @@ en:
         it below.
       title: Enter your personal key
     backup_code:
-      title: Personal Security Codes
+      title: Backup Codes
       info: Use backup codes if you cannot access your phone to sign in
       instructions: You will be asked for a login code each time you sign in
         to your login.gov account.
@@ -44,7 +44,7 @@ en:
       subinfo1: Each code may only be used once, once the 9th code has been
         used you will be prompted to download a new list.  Treat your recovery
         codes with the same level of attention as you would your password.
-      download: Download, print or write down your personal security codes.
+      download: Download, print or write down your backup codes.
       generate: Generate new backup codes
       generate_info: When you generate new codes, you must download or print them.
         Your old codes won't work anymore.
