--- a/config/locales/forms/es.yml
+++ b/config/locales/forms/es.yml
@@ -36,18 +36,18 @@ es:
         a continuación.
       title: Ingrese su clave personal
     backup_code:
-      title: Personal Security Codes
+      title: Códigos de respaldo
       info: Use códigos de inicio de sesión si no puede acceder a su teléfono para iniciar sesión
       instructions: Se le pedirá un código de inicio de sesión cada vez que inicie sesión.
         a su cuenta login.gov.
-      subtitle1: Your backup codes
-      subinfo1: Each code may only be used once, once the 9th code has been
-        used you will be prompted to download a new list.  Treat your recovery
-        codes with the same level of attention as you would your password.
-      download: Download, print or write down your personal security codes.
-      generate: Generate new backup codes
-      generate_info: When you generate new codes, you must download or print them.
-        Your old codes won't work anymore.
+      subtitle1: Tus códigos de respaldo
+      subinfo1: Cada código solo se puede utilizar una vez, una vez que el 9º código haya sido
+        Se le pedirá que descargue una nueva lista. Trata tu recuperación
+        Códigos con el mismo nivel de atención que tu contraseña.
+      download: Descargue, imprima o anote sus códigos de seguridad personales.
+      generate: Generar nuevos códigos de respaldo.
+      generate_info: Cuando genera nuevos códigos, debe descargarlos o imprimirlos.
+         Tus viejos códigos ya no funcionarán.
     phone:
       buttons:
         delete: Eliminar el teléfono
