--- a/config/locales/two_factor_authentication/en.yml
+++ b/config/locales/two_factor_authentication/en.yml
@@ -107,7 +107,7 @@ en:
       voice_info: Get your security code via phone call
       webauthn: Security key
       webauthn_info: Use a security key to secure your account
-      backup_code: Personal Security Codes
+      backup_code: Backup Codes
       backup_code_info: Recieve a pre-generated list of security codes to use when signing in
     webauthn_fallback:
       question: Don't have your security key available?
